--- a/style.css
+++ b/style.css
@@ -463,3 +463,31 @@ footer a {
     font-size: 18px;
 }
 
+.avaliacao-usuario {
+    margin-top: 30px;
+}
+
+.estrelas-input span {
+    font-size: 28px;
+    cursor: pointer;
+    color: #444;
+}
+
+.estrelas-input span.ativa {
+    color: #C89B3C;
+}
+
+#comentario {
+    width: 100%;
+    margin-top: 15px;
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid #333;
+    background: #0f1012;
+    color: #F0ECE6;
+    resize: none;
+}
+
+#enviar-avaliacao {
+    margin-top: 15px;
+}v
